--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Best Deals Store</title>
-<meta name="description" content="Best Amazon product reviews and deals">
+<title>Trusted Amazon Product Reviews & Recommendations</title>
+<meta name="description" content="We provide honest reviews and recommendations for top-rated Amazon products to help users choose the best items at the best prices.">
+<style>
+/* CSS للـ Navbar */
+body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+nav { background-color: #333; padding: 10px; }
+nav a { color: white; margin-right: 15px; text-decoration: none; font-weight: bold; }
+nav a:hover { text-decoration: underline; }
+.container { padding: 20px; }
+</style>
 </head>
 <body>
-<h1>Best Amazon Products</h1>
-<p>We review and recommend the best products.</p>
+
+<!-- Navbar -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="privacy-policy.html">Privacy Policy</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<!-- محتوى الصفحة -->
+<div class="container">
+<h1>Trusted Amazon Product Reviews & Recommendations</h1>
+<p>
+Welcome to our website. We help people discover high-quality Amazon products through honest reviews, comparisons, and recommendations. Our goal is to save your time and help you choose the best products that fit your needs and budget.
+</p>
+</div>
+
 </body>
 </html>
