--- a/about.html
+++ b/about.html
@@ -3,11 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <title>About Us</title>
+<style>
+body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+nav { background-color: #333; padding: 10px; }
+nav a { color: white; margin-right: 15px; text-decoration: none; font-weight: bold; }
+nav a:hover { text-decoration: underline; }
+.container { padding: 20px; }
+</style>
 </head>
 <body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="privacy-policy.html">Privacy Policy</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="container">
 <h1>About Us</h1>
 <p>
 Our website is dedicated to helping customers find the best Amazon products. We provide honest reviews, detailed comparisons, and helpful recommendations to make your shopping experience easier and more reliable. Our goal is to save you time and help you make informed decisions.
 </p>
+</div>
+
 </body>
 </html>
