--- a/index.html
+++ b/index.html
@@ -33,3 +33,21 @@ Welcome to our website. We help people discover high-quality Amazon products thr
 
 </body>
 </html>
+<hr>
+
+<h2>Wireless Bluetooth Headphones</h2>
+
+<p>
+These wireless Bluetooth headphones deliver clear sound quality, strong bass, and stable connectivity.
+They are designed for daily use, whether you are listening to music, watching videos, or making calls.
+With a comfortable fit and long battery life, they are a great choice for home, work, and travel.
+</p>
+
+<ul>
+  <li>High-quality sound with deep bass</li>
+  <li>Bluetooth stable connection</li>
+  <li>Comfortable and lightweight design</li>
+  <li>Long battery life for daily use</li>
+</ul>
+
+<a href="#" target="_blank">Check price on Amazon</a>
