--- a/index.html
+++ b/index.html
@@ -50,4 +50,7 @@ With a comfortable fit and long battery life, they are a great choice for home, 
   <li>Long battery life for daily use</li>
 </ul>
 
-<a href="#" target="_blank">Check price on Amazon</a>
+<a href="https://www.amazon.fr/dp/B0DPLF537Q/?tag=ab173313-21" target="_blank">
+Check price on Amazon
+</a>
+
