--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ With a comfortable fit and long battery life, they are a great choice for home, 
   <li>Long battery life for daily use</li>
 </ul>
 
-<a href="https://www.amazon.fr/dp/B0DPLF537Q/?tag=ab173313-21" target="_blank">
+<a href="https://www.amazon.fr/s?k=Wireless+Bluetooth+Headphones&i=specialty-aps&srs=95175954031&crid=3KXNR1XZS871S&sprefix=wireless+bluetooth+headphones%2Cspecialty-aps%2C304&linkCode=ll2&tag=ab173313-21&linkId=9dd4a24b930b71821616318c0f7f9af0&ref_=as_li_ss_tl" target="_blank">
 Check price on Amazon
 </a>
 
