--- a/index.html
+++ b/index.html
@@ -54,3 +54,44 @@ With a comfortable fit and long battery life, they are a great choice for home, 
 Check price on Amazon
 </a>
 
+<hr>
+
+<div style="text-align:center; margin:20px 0;">
+  <!-- https://m.media-amazon.com/images/I/61dpw6ZhFpL._AC_SX679_.jpg -->
+  <img src="https://m.media-amazon.com/images/I/71w5v1kF2FL._AC_SL1500_.jpg" 
+       alt="Wireless Bluetooth Headphones" 
+       style="width:300px; border-radius:10px;">
+
+  <!-- The G-Lab - Korp Iridium - Wireless Gaming Headset 2.4GHz & Bluetooth, High Quality Audio, Detachable Microphone, Battery Life 45H, RGB, Faux Leather Earbuds - PS5, PS4, PC, SWITCH, ANDROID, IOS -->
+  <h2>Wireless Bluetooth Headphones</h2>
+
+  <!-- [High Quality Sound: Total Immersion] Immerse yourself in the action with the Korp Iridium, a wireless gaming headset equipped with dual 2.4GHz connectivity (via USB-A & USB-C) and Bluetooth. Enjoy high-precision stereo sound with 50mm speakers, for total immersion on PS5, PS4, PC gamer. This ps5 gaming headset is designed to turn every session into a unique experience.
+[Ultimate Comfort for Long Sessions] Dominate your games without compromise with the breathable leatherette ear pads and adjustable headband of this wireless gaming headset. Ergonomic and lightweight, it provides exceptional comfort for gaming marathons on PC, PS5, PS4, Switch. This PS5 wireless headset offers you the perfect combination of comfort and performance.
+[Detachable Mic: Perfect Communication] Take the advantage with a PS4 gaming headset with detachable and flexible microphone that ensures clear and precise voice. Built-in control buttons allow you to easily adjust the volume and audio settings. This headset mic is ideal for coordinating your strategies on PC gamer, PS4, PS5, Switch without interruption.
+[XXL Battery Life for Uninterrupted Games] Don't let a low battery interrupt your exploits. Enjoy up to 45 hours of battery life on Bluetooth and 25 hours in 2.4GHz wireless mode with this PC gaming headset. Charge quickly via USB-C and stay in action no matter your device.
+[RGB Style & Full Compatibility] Add a touch of style to your setup with the vibrant RGB backlight. This wireless gaming headset is compatible with PS4, PS5, Switch, Android, and iOS, providing an uncompromising gaming experience. Enhance your victories with this stylish yet powerful PlayStation 5 headset. -->
+  <p>
+    Enjoy crystal-clear sound, deep bass, and a comfortable fit with these wireless Bluetooth headphones.
+    Perfect for music, calls, and travel. Long-lasting battery ensures you never run out of entertainment.
+  </p>
+
+  <!-- Son stéréo haute qualité
+Connexion sans fil Dual Mode
+Autonomie Longue Durée 45h
+Microphone détachable
+Casque RGB ultra confort & rembourré
+PC-PS4-PS5-XBOX-ANDROID-IOS -->
+  <ul style="list-style-type:disc; text-align:left; display:inline-block;">
+    <li>High-quality sound with deep bass</li>
+    <li>Stable Bluetooth connection</li>
+    <li>Lightweight and comfortable design</li>
+    <li>Long battery life for daily use</li>
+  </ul>
+  <!-- https://www.amazon.fr/-/en/G-Lab-Wireless-Bluetooth-Detachable-Microphone/dp/B0DPLF537Q?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3DCFF625J3YFD&dib=eyJ2IjoiMSJ9.7k0QaMfE0YkrUvHv9J1OAk2Jf5ZZKRaoyUATcjCHlf6u5LmfJBfggNJtnoqgBLwbaEX_g0HQ5V9VJ-Al_ArVLIZPrRd0rplA7YYPvuxoErUwtdwvZpbkZvc6sgqbWwpUer6r1x7zs1JSv1xgIDsKbj0w3qQRZM6rd-oWQAmjWcAE5ws0PRtPBdtQD15OApxc9z2sagUZb_XQ-mjMICqQqM0r3EZ-UTM-q6RTzZlMi3dqyyGWqavcquJDPPwmvX1HbGyaMfnZQ00LDHH8oOn5qopxe5TNR_n1C1tmRkpROls.MC-plQDQAyrquHw5VdjAB5DG6GBpgbz3f_0uQ5zvNCQ&dib_tag=se&keywords=The%2BG-Lab%2B-%2BKorp%2BIridium%2B-%2BCasque%2BGaming%2BSans%2BFil%2B2.4GHz%2B%26%2BBluetooth%2C%2BAudio%2BHaute%2BQualit%C3%A9%2C%2BMicro%2BD%C3%A9tachable%2C%2BAutonomie%2B45H%2C%2BRGB%2C%2BOreillettes%2BSimilicuir%2B-%2BCasque%2Bgaming%2BPS5%2CPS4%2CPC%2C%2BSWITCH%2C%2BANDROID%2C%2BIOS&qid=1769813615&s=electronics&sprefix=the%2Bg-lab%2B-%2Bkorp%2Biridium%2B-%2Bcasque%2Bgaming%2Bsans%2Bfil%2B2.4ghz%2B%26%2Bbluetooth%2C%2Baudio%2Bhaute%2Bqualit%C3%A9%2C%2Bmicro%2Bd%C3%A9tachable%2C%2Bautonomie%2B45h%2C%2Brgb%2C%2Boreillettes%2Bsimilicuir%2B-%2Bcasque%2Bgaming%2Bps5%2Cps4%2Cpc%2C%2Bswitch%2C%2Bandroid%2C%2Bios%2Celectronics%2C252&sr=1-1&th=1&linkCode=ll2&tag=ab173313-21&linkId=9b311d9d9e76c5f14287ab584c1d9a55&ref_=as_li_ss_tl -->
+  <br> 
+  <a href="https://www.amazon.fr/dp/B0DPLF537Q/?tag=ab173313-21" 
+     target="_blank" 
+     style="display:inline-block; padding:10px 20px; background-color:#ff9900; color:white; text-decoration:none; border-radius:5px; margin-top:10px;">
+    Check price on Amazon
+  </a>
+</div>
