--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Welcome to our website. We help people discover high-quality Amazon products thr
 </html>
 <hr>
 
-<h2>Wireless Bluetooth Headphones</h2>
+<h2>0073150c-612d-4c4e-91b2-fe34b5199ba5.__CR0,0,300,400_PT0_SX300_V1___.jfifs</h2>
 
 <p>
 These wireless Bluetooth headphones deliver clear sound quality, strong bass, and stable connectivity.
