--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Welcome to our website. We help people discover high-quality Amazon products thr
 </html>
 <hr>
 
-<h2>0073150c-612d-4c4e-91b2-fe34b5199ba5.__CR0,0,300,400_PT0_SX300_V1___.jfifs</h2>
+<h2>Wireless Bluetooth Headphones_V1___.jfifs</h2>
 
 <p>
 These wireless Bluetooth headphones deliver clear sound quality, strong bass, and stable connectivity.
@@ -95,3 +95,4 @@ PC-PS4-PS5-XBOX-ANDROID-IOS -->
     Check price on Amazon
   </a>
 </div>
+<img src="https://github.com/rrrelax111-creator/rrrelax111-creator.github.io/commit/938b7d8d277c0964287920752ad8f02e9c7c15c9#diff-9d7f20b006b8b45e6e5bf306ba5848a803d1f748f39368925db653e28cde9e24" alt="Wireless Bluetooth Headphones" style="width:300px;">
